Add test for template generation

--- a/uniform_patterner/Cargo.toml
+++ b/uniform_patterner/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 uniform_model = { path = "../uniform_model" }
+
+[dev-dependencies]
+uniform_parser = { path = "../uniform_parser" }
